--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Haojie Wang, Ph.D"
-  avatar           : "profile.png"
+  avatar           : "https://scholar.googleusercontent.com/citations?view_op=view_photo&user=oU5bH20AAAAJ&citpid=6"
   bio              : "Post-doctoral Researcher, HKUST"
   location         : "Hong Kong SAR, CN"
   employer         : 
