--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Haojie Wang, Ph.D"
-  avatar           : "https://scholar.googleusercontent.com/citations?view_op=view_photo&user=oU5bH20AAAAJ&citpid=6"
+  avatar           : "profile.jpg"
   bio              : "Post-doctoral Researcher, HKUST"
   location         : "Hong Kong SAR, CN"
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=oU5bH20AAAAJ&hl=en&authuser=2"
-  email            :
+  email            : "h.wang@connect.ust.hk"
   researchgate     : "https://www.researchgate.net/profile/Haojie-Wang-6"
   uri              :
   bitbucket        :
