--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/haojie-wang-308019130/"
+  linkedin         : "haojie-wang-308019130/"
   orcid            : "https://orcid.org/0000-0002-1803-6250"
   pinterest        :
   soundcloud       :
