--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Haojie Wang's Homepage"
+title                    : "Haojie Wang | Home"
 title_separator          : "-"
 name                     : &name "Haojie Wang"
 description              : &description "Post-doctoral Researcher, HKUST"
